StyleFix: Issue with metabnb logo fixed on mobile

--- a/src/scss/2-base/_basic.scss
+++ b/src/scss/2-base/_basic.scss
@@ -31,4 +31,7 @@ button {
   body {
     padding: 0 2rem;
   }
+  .App {
+    padding-top: 0;
+  }
 }
