--- a/src/scss/3-components/_nav.scss
+++ b/src/scss/3-components/_nav.scss
@@ -42,7 +42,7 @@
     padding: 1rem;
     background-color: aquamarine;
     width: 20rem;
-    transform: translateY(20px);
+    transform: translateY(40px);
   }
   .nav-elements {
     position: static;
@@ -66,5 +66,8 @@
 @media only screen and (max-width: $mobile) {
   .nav {
     width: calc(100% - 4rem);
+  }
+  .metabnb-logo {
+    height: 2rem;
   }
 }
